T1--login-and-registration

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
@@ -64,7 +64,8 @@
       "plugin:vue-pug/vue3-recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
       "parser": {
